add update user controller doc and test.
