# app/Controllers/Http/UserController.ts
@@ -1,3 +1,4 @@
+import Hash from '@ioc:Adonis/Core/Hash'
 import type { HttpContextContract } from '@ioc:Adonis/Core/HttpContext'
 import User from 'App/Models/User'
 import UpdateUserValidator from 'App/Validators/UpdateUserValidator'
@@ -10,9 +11,14 @@ export default class UsersController {
 
   public async update({ request, response, auth }: HttpContextContract) {
     const payload = await request.validate(UpdateUserValidator)
+    if(payload.oldPassword != null) {
+      if(await Hash.verify(auth.user!.password, payload.oldPassword)){
+        delete payload.oldPassword
+      } else {
+        return response.badRequest({message: 'invalid password'})
+      }
+    }
     await auth.user!.merge(payload).save()
-    return response.send({
-      
-    })
+    return response.send(payload)
   }
 }
